--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app/index.ts"
+    "dev": "concurrently \"nodemon app/app.ts\" \"nodemon app/server.ts\""
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,10 @@
     "fs": "^0.0.1-security",
     "mongodb": "^6.13.0",
     "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2"
   }
 }
