--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "fs": "^0.0.1-security",
     "mongodb": "^6.13.0",
     "nodemon": "^3.1.9",
+    "rand-seed": "^2.1.7",
     "socket.io": "^4.8.1",
     "typescript": "^5.7.3"
   },
