--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "typescript": "^5.7.3"
   },
   "devDependencies": {
-    "concurrently": "^9.1.2"
+    "@testcontainers/mongodb": "^10.22.0",
+    "concurrently": "^9.1.2",
+    "jest": "^29.7.0"
   }
 }
