--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "fs": "^0.0.1-security",
     "mongodb": "^6.13.0",
     "nodemon": "^3.1.9",
@@ -24,6 +26,8 @@
   },
   "devDependencies": {
     "@testcontainers/mongodb": "^10.22.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express-session": "^1.18.1",
     "concurrently": "^9.1.2",
     "jest": "^29.7.0"
   }
